--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,29 +1,44 @@
-# Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: rheinklang
+repo: upptime 
+
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/5 * * * *"
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Website
+    url: https://rheinklang.events
+    icon: https://rheinklang.events/favicon.png
+  - name: Bio Links
+    url: https://bio.rheinklang.events/links
+    icon: https://www.switchy.io/assets/favicons/favicon.ico
+  - name: CMS
+    url: $SITE_CMS
+    icon: https://getcockpit.com/favicon.png
+  - name: Accounting
+    url: $SITE_ACCOUNTING
+    icon: https://assets.akaunting.com/site/img/logo/akaunting-logo.ico
+  - name: Kanboard
+    url: $SITE_KANBOARD
+    icon: https://kanboard.rheinklang.events/assets/img/favicon.png
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
+  cname: status.rheinklang.events
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Eine Übersicht über die Stati unserer Services."
+  introMessage: Die dargestellten Daten werden in **echtzeit** aus unserem [GitHub repository](https://github.com/rheinklang/uptime) aggregiert.
+  customHeadHtml: "<script>var _mtm = window._mtm = window._mtm || [];_mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];g.async=true; g.src='https://analytics.rheinklang.events/js/container_YSfneGKs.js'; s.parentNode.insertBefore(g,s);</script>"
   navbar:
     - title: Status
       href: /
+    - title: Website
+      href: https://rheinklang.events
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
